; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_ctl.c_prof_log_stop_ctl.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_ctl.c_prof_log_stop_ctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@config_prof = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@EFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64*, i64, i8*, i64*, i8*, i64)* @prof_log_stop_ctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prof_log_stop_ctl(i32* %0, i64* %1, i64 %2, i8* %3, i64* %4, i8* %5, i64 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  store i32* %0, i32** %9, align 8
  store i64* %1, i64** %10, align 8
  store i64 %2, i64* %11, align 8
  store i8* %3, i8** %12, align 8
  store i64* %4, i64** %13, align 8
  store i8* %5, i8** %14, align 8
  store i64 %6, i64* %15, align 8
  %16 = load i32, i32* @config_prof, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %7
  %19 = load i32, i32* @ENOENT, align 4
  store i32 %19, i32* %8, align 4
  br label %28

20:                                               ; preds = %7
  %21 = load i32*, i32** %9, align 8
  %22 = call i32 @tsd_tsdn(i32* %21)
  %23 = call i64 @prof_log_stop(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = load i32, i32* @EFAULT, align 4
  store i32 %26, i32* %8, align 4
  br label %28

27:                                               ; preds = %20
  store i32 0, i32* %8, align 4
  br label %28

28:                                               ; preds = %27, %25, %18
  %29 = load i32, i32* %8, align 4
  ret i32 %29
}

declare dso_local i64 @prof_log_stop(i32) #1

declare dso_local i32 @tsd_tsdn(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
